--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crawler": "^1.2.1",
     "joplin-turndown-plugin-gfm": "^1.0.11",
     "mariadb": "^2.1.3",
+    "rss-parser": "^3.7.3",
     "sequelize": "^5.21.2",
     "turndown": "^5.0.3"
   },
